	+ Support for multiple profiles (and, e.g., "sonata --profile=2")
	+ Ability to rename playlists (requires mpd >= 0.13)
	+ Prevent continually searching for artwork/lyrics if not found the first time
	+ Search for additional artwork filenames
	+ Allows resetting artwork to the default image
	+ 'Save All' button for tag editing window
	+ MPD status in systray icon
	+ Added Finnish translation (lkka Tuohela)
	+ Bug: Multimedia keys no longer work in Gnome 2.18 (Florian)
	+ Bug: Hide statusbar in collapse mode when showing from systray
	+ Bug: Cover artwork filename doesn't use system's locale charset
	+ Bug: MPD_HOST variable doesn't work when it includes password

v1.1.1 - May 18, 2007
	+ Add Swedish translation (Daniel Nylander)
	+ Bug: Incorrect artist can sometimes be set for album art/info (vEX)
	+ Bug: Artwork isn't set when there is a single image in the song's dir
	+ Bug: Improve handling under tiling WMs like ion3
	+ Bug: A 2nd instance isn't prevented with dbus/python 2.4 (Sebastian)

v1.1 - May 7, 2007
	+ Ctrl-J for xmms-like search filter (vEX/Eduard)
	+ Implemented logic for Various Artists albums
	+ Cover art pref: save to ~/.covers or file's respective dir
	+ Support for GNOME session management
	+ Allow searching through ALL metadata in library
	+ Link artist and album name in song info window to wikipedia entry
	+ Add shuffle, repeat, --visible, and --hidden commandline arguments
	+ Show if mpd is updating in statusbar
	+ Save last used option in library search
	+ Update code for dbus-python 0.80 API (Jordan)
	+ Ellipsize text in treeviews, current playing song (Jordan)
	+ Add button for listing of shortcuts to About dialog
	+ Resize cover art to fit song info window
	+ Added Simplified Chinese translation (Desmond Chang)
	+ Bug: Prevent tracebacks between withdrawing app & gtk.StatusIcon
	+ Bug: Fix error if mpd is not running and sonata starts hidden
	+ Bug: Can't manually set artwork across filesystems